add_subdirectory(gui)
add_subdirectory(ged)
add_subdirectory(fitpanel)
add_subdirectory(guibuilder)
add_subdirectory(guihtml)
add_subdirectory(recorder)
add_subdirectory(sessionviewer)
if(qtgsi)
  add_subdirectory(qtgsi)
endif()
if(qt4 OR qt5)
  add_subdirectory(qtroot)
endif()
if(qtgui)
  add_subdirectory(qtgui)
endif()
